tests/idris2/coverage/coverage015/expected
1/1: Building Issue1169 (Issue1169.idr)
Error: test is not covering.

Issue1169:3:1--3:26
 1 | %default total
 2 | 
 3 | test : (String, ()) -> ()
     ^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test (_, _)

Error: test' is not covering.

Issue1169:6:1--6:24
 2 | 
 3 | test : (String, ()) -> ()
 4 | test ("a", ()) = ()
 5 | 
 6 | test' : (Int, ()) -> ()
     ^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test' (_, _)

Error: test'' is not covering.

Issue1169:9:1--9:22
 5 | 
 6 | test' : (Int, ()) -> ()
 7 | test' (1, ()) = ()
 8 | 
 9 | test'' : Type -> Type
     ^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test'' _

1/1: Building Issue1366 (Issue1366.idr)
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  f is shadowing Main.f

Issue1366:30:3--30:33
 26 |   uninhabited (Z _) impossible
 27 |   uninhabited (S _) impossible
 28 | 
 29 | data Funny : (a : Type) -> (f : Type -> Type) -> Type where
 30 |   A : List a -> f a -> Funny a f
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  f is shadowing Main.f

Issue1366:31:3--31:16
 27 |   uninhabited (S _) impossible
 28 | 
 29 | data Funny : (a : Type) -> (f : Type -> Type) -> Type where
 30 |   A : List a -> f a -> Funny a f
 31 |   B : Funny a f
        ^^^^^^^^^^^^^

Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  f is shadowing Main.f

Issue1366:33:1--33:45
 29 | data Funny : (a : Type) -> (f : Type -> Type) -> Type where
 30 |   A : List a -> f a -> Funny a f
 31 |   B : Funny a f
 32 | 
 33 | decode : NS [[List a, f a], []] -> Funny a f
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: decode is not covering.

Issue1366:33:1--33:45
 29 | data Funny : (a : Type) -> (f : Type -> Type) -> Type where
 30 |   A : List a -> f a -> Funny a f
 31 |   B : Funny a f
 32 | 
 33 | decode : NS [[List a, f a], []] -> Funny a f
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    decode (S _)

